--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-credentials.py
+/credentials
+/cache
+/store
 
 /node_modules
-/jebbit-product-health-env
 
-https://github.com/github/gitignore/blob/master/Global/macOS.gitignore
+# https://github.com/github/gitignore/blob/master/Global/macOS.gitignore
 
 # General
 *.DS_Store
@@ -51,7 +52,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
